# cozmio

./: .gitignore  AGENTS.md  BP-Cozmio-AI-Box-Complete.md  BP-Cozmio-AI-Box-Section-Business.md  BP-Cozmio-AI-Box-Section-PM.md  BP-Cozmio-AI-Box-Section-Strategy.md  BP-Cozmio-AI-Box-Section-Team.md  BP-Cozmio-AI-Box-Section-Tech.md  BP-商业计划书.md  CLAUDE.md  README.md  b64_source.txt  claude-progress.txt  exec_test.txt  feature_list.json  package.json  ping_test.txt  pnpm-lock.yaml
.github/workflows/: deploy.yml  update-progress.yml
agent-field-eval-workspace/iteration-1/: benchmark.md
content/book/vol1/: ch-01.md  ch-02.md
content/book/vol2/: ch-04.md  ch-06.md
content/book/vol3/: ch-09.md  ch-13.md  ch-14.md
content/book/vol4/: ch-16.md  ch-18.md
content/book/vol5/: appendix-c.md  appendix-e.md  appendix-f.md
cozmio/: Cargo.toml  README.md  batch_embed_qwen3.py  claude-progress.txt  feature_list.json  init.ps1
cozmio-api/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json
cozmio-api/src/: app.ts  index.ts
cozmio-api/src/db/: index.ts  schema.ts
cozmio-api/src/lib/: errors.ts  response.ts
cozmio-api/src/middleware/: require-admin.ts  (+1 more)
cozmio/cozmio-box-worker/: Cargo.toml
cozmio/cozmio-box-worker/config/: box-model.toml  box-model.toml.example  box-worker.toml  box-worker.toml.example
cozmio/cozmio-box-worker/deployment/: box-model.toml.example  cozmio-box-worker.service
cozmio/cozmio-box-worker/scripts/: hardware_probe.sh  install_model.sh  logs.sh  make_vision_json.py  start.sh  status.sh  stop.sh  test_basic.json  test_vision.json  test_vision_pi.sh
cozmio/cozmio-box-worker/src/: box_model_runtime.rs  config.rs  heartbeat.rs  main.rs  model_provider.rs  protocol.rs  status.rs  worker.rs
cozmio/cozmio-box-worker/src/providers/: llama_cpp.rs  mock.rs  mod.rs
cozmio/cozmio-cli/: Cargo.toml
cozmio/cozmio-cli/src/: main.rs
cozmio/cozmio_capture/: Cargo.toml
cozmio/cozmio_core/: Cargo.toml
cozmio/cozmio_core/src/: error.rs  lib.rs  monitor.rs  screenshot.rs  types.rs  window.rs
cozmio/cozmio_core/tests/: unit_tests.rs
cozmio/cozmio_memory/: Cargo.toml
cozmio/cozmio_memory/src/: agent_memory.rs  competition.rs  context_slices.rs  db.rs  decision_memory.rs  embed_disabled.rs  embed_fastreembed.rs  embed_mock.rs  embed_provider.rs  error.rs  importer.rs  lib.rs  memory_events.rs  schema.rs  search.rs  seed.rs  skill_memory.rs  slice_builder.rs  task_threads.rs  thread_linker.rs  vec_store.rs
cozmio/cozmio_model/: Cargo.toml
cozmio/cozmio_model/src/: client.rs  error.rs  lib.rs
cozmio/cozmio_verify/: Cargo.toml
cozmio/cozmio_verify/src/: main.rs
cozmio/embedding-probe/: Cargo.toml
cozmio/memory-cli/: Cargo.toml
cozmio/relay-client/: Cargo.toml  build.rs
cozmio/relay-engine/: Cargo.toml  test_real_chain.py  test_v8_subscription.py
cozmio/relay-engine/src/: agent.rs  error.rs  inference_router.rs  main.rs  session.rs  worker_registry.rs  worker_session.rs
cozmio/relay-engine/src/agents/: claude_code.rs  mod.rs
cozmio/relay-engine/src/proto/: mod.rs
cozmio/relay-engine/src/transport/: mod.rs  unix.rs  windows.rs
cozmio/src-tauri/: Cargo.toml  package-lock.json  tauri.conf.json  verify_protocol.js
cozmio/src-tauri/capabilities/: default.json
cozmio/src-tauri/src/: app_running.rs  commands.rs  competition_commands.rs  config.rs  confirmation_flow.rs  context_admission.rs  dashboard_commands.rs  distill_commands.rs  eval_commands.rs  evaluation.rs  executor.rs  executor_session_registry.rs  experience_recorder.rs  human_memory.rs  index.html  ledger.rs  logging.rs  main.js  main.rs  main_loop.rs  memory_commands.rs  memory_consolidation.rs  mini.html  mini_window.rs  model_client.rs  notification_manager.rs  prompt_context.rs  protocol_handler.rs  relay_bridge.rs  runtime_state.rs  styles.css  toast_verification.rs  transcript_import.rs  tray.rs  types.rs  ui_state.rs  updater.rs  window_monitor.rs
cozmio/src-tauri/src/components/: App.js  HistoryList.js  MemoryInspector.js  MiniDot.js  MiniPanel.js  PresenceModel.js  Settings.js  StatusPanel.js
cozmio/src-tauri/tests/: semantic_boundary.rs
cozmio/verification/: desktop_behavior_test.ps1  last_result.json.new  last_verification.json  verify_ui.ps1
docs/: PRD.md  chatgpt-memory-flywheel-2026-05-06.md  server-info.md
docs/archives/: 2026-05-06-deployment-failure-log.md
public/data/: progress.json
scripts/: deploy-pages.mjs  generate-progress-data.mjs
src/app/: globals.css  layout.tsx  page.tsx  sitemap.ts
src/components/: CapabilityCards.tsx  ChapterNavigation.tsx  HeroSection.tsx  HomepageTeaser.tsx  HowItWorks.tsx  LiveDemoBlock.tsx  MarkdownRenderer.tsx  TocSidebar.tsx
src/lib/: demo-script.ts  progress-data.ts  site-config.ts
verification/: last_verification.json
web/: .gitignore  README.md  package.json
(+255 files in other folders)
