[package]
name = "cozmio-box-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
serde_json = "1"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[build-dependencies]
prost-build = "0.13"

