[package]
name = "cozmio_model"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "2.0"
regex = "1.0"
log = "0.4"

[dev-dependencies]
tokio-test = "0.4"